src/test/ui/consts/issue-78655.stderr
error[E0381]: borrow of possibly-uninitialized variable: `x`
  --> $DIR/issue-78655.rs:3:5
   |
LL |     &x
   |     ^^ use of possibly-uninitialized `x`

error: could not evaluate constant pattern
  --> $DIR/issue-78655.rs:7:9
   |
LL |     let FOO = FOO;
   |         ^^^

error: could not evaluate constant pattern
  --> $DIR/issue-78655.rs:7:9
   |
LL |     let FOO = FOO;
   |         ^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0381`.
